--- a/catalog/view/theme/default/stylesheet/style.css
+++ b/catalog/view/theme/default/stylesheet/style.css
@@ -22,6 +22,7 @@ body{font-family:"microsoft yahei";font-size:.28em;line-height:1;color:#333;back
 .h4,h4{font-size:.175rem}
 .h5,h5{font-size:.14rem}
 .h6,h6{font-size:.119rem}
+.clear{clear:both;}
 h6{margin-top:0;margin-bottom:0}
 button,input,select,textarea{font-family:inherit;font-size:inherit;line-height:inherit}
 a{color:#06c1ae;text-decoration:none;outline:0}
@@ -410,19 +411,21 @@ nav .userIcon:before{content:"U";}
 .goods_box > img {width:100%;height:100%;}
 .review_header { width: 100%;height: 30px;background: #FFF; margin: 1px 0 5px 0; border-bottom: 1px solid #F3F3F3;line-height:30px; overflow: hidden; }
 .review_header span {height100%;text-align: left;float: left;padding:0 3px 0 10px;}
-.review_header .grade-star,.review_content .review_single .grade-star {width: 85px;height: 100%;position:relative;margin-top:6px;float: left;background: url('../images/review_star.png') no-repeat ;}
-.review_header .grade-star.g-star1,.review_content .review_single .grade-star.g-star1{background-position:-68px 0}
-.review_header .grade-star.g-star2,.review_content .review_single .grade-star.g-star2{background-position:-51px 0}
-.review_header .grade-star.g-star3,.review_content .review_single .grade-star.g-star3{background-position:-34px 0}
-.review_header .grade-star.g-star4,.review_content .review_single .grade-star.g-star4{background-position:-17px 0}
-.review_header .grade-star.g-star5,.review_content .review_single .grade-star.g-star5{background-position:0 0}
+.review_header .grade-star,.review_list .review_single .grade-star {width: 85px;height:15px;position:relative;margin-top:6px;float: left;background: url('../images/review_star.png') no-repeat ;}
+.review_header .grade-star.g-star0,.review_list .review_single .grade-star.g-star0{background-position:-84px 0}
+.review_header .grade-star.g-star1,.review_list .review_single .grade-star.g-star1{background-position:-68px 0}
+.review_header .grade-star.g-star2,.review_list .review_single .grade-star.g-star2{background-position:-51px 0}
+.review_header .grade-star.g-star3,.review_list .review_single .grade-star.g-star3{background-position:-34px 0}
+.review_header .grade-star.g-star4,.review_list .review_single .grade-star.g-star4{background-position:-17px 0}
+.review_header .grade-star.g-star5,.review_list .review_single .grade-star.g-star5{background-position:0 0}
 .review_header .right {width: 40%;height:100%;text-align: right;float: right;padding-right:10px;}
-.review_content {height: 90px;background: #FFF;border-top: 1px solid #F3F3F3;padding:0 10px 0 10px;overflow: hidden;}
-.review_content .name {height:30px;line-height:30px;}
-.review_content .name.left {float:left}
-.review_content .name.right {float: right;}
-.review_content .review_single {height:30px;line-height:30px;}
-.review_content .review_single span {float: left;}
+.review_list {min-height: 70px;background: #FFF;border-top: 1px solid #F0F0F0;padding:10px;}
+.review_list .review_name {height:20px;line-height:20px;}
+.review_list .review_name.left {float:left}
+.review_list .review_name.right {float: right;}
+.review_list .review_single {height:30px;line-height:30px;}
+.review_list .review_single span {float: left;}
+.review_list .review_content {line-height:18px;text-align: left;word-break:break-all}
 
 .deal_list { display: block; overflow: hidden; padding: 3% 0 }
 .deal_list p { display: block; overflow: hidden; padding: 5px 0 }
