--- a/catalog/view/theme/default/stylesheet/style.css
+++ b/catalog/view/theme/default/stylesheet/style.css
@@ -421,11 +421,11 @@ nav .userIcon:before{content:"U";}
 .review_header .right {width: 40%;height:100%;text-align: right;float: right;padding-right:10px;}
 .review_list {min-height: 70px;background: #FFF;border-top: 1px solid #F0F0F0;padding:10px;}
 .review_list .review_name {height:20px;line-height:20px;}
-.review_list .review_name.left {float:left}
-.review_list .review_name.right {float: right;}
+.review_list .review_name.left {float:left;color: #888888;}
+.review_list .review_name.right {float: right;color: #888888;}
 .review_list .review_single {height:30px;line-height:30px;}
-.review_list .review_single span {float: left;}
-.review_list .review_content {line-height:18px;text-align: left;word-break:break-all}
+.review_list .review_single span {float: left;color: #888888;}
+.review_list .review_content {line-height:18px;text-align: left;word-break:break-all;color: #666666;}
 
 .deal_list { display: block; overflow: hidden; padding: 3% 0 }
 .deal_list p { display: block; overflow: hidden; padding: 5px 0 }
