--- a/catalog/view/theme/default/stylesheet/style.css
+++ b/catalog/view/theme/default/stylesheet/style.css
@@ -409,7 +409,7 @@ nav .userIcon:before{content:"U";}
 .box_list .box_nav .current a { color: #FFFFFF; background-color: #edc700; border-right: none }
 .goods_box { }
 .goods_box > img {width:100%;height:100%;}
-.review_header { width: 100%;height: 30px;background: #FFF; margin: 1px 0 5px 0; border-bottom: 1px solid #F3F3F3;line-height:30px; overflow: hidden; }
+.review_header { width: 100%;height: 30px;background: #FFF; margin: 1px 0 5px 0; border-bottom: 1px solid #F3F3F3;line-height:30px; overflow: hidden;position:relative;z-index: 100;top: 0; }
 .review_header span {height100%;text-align: left;float: left;padding:0 3px 0 10px;}
 .review_header .grade-star,.review_list .review_single .grade-star {width: 85px;height:15px;position:relative;margin-top:6px;float: left;background: url('../images/review_star.png') no-repeat ;}
 .review_header .grade-star.g-star0,.review_list .review_single .grade-star.g-star0{background-position:-84px 0}
@@ -419,6 +419,7 @@ nav .userIcon:before{content:"U";}
 .review_header .grade-star.g-star4,.review_list .review_single .grade-star.g-star4{background-position:-17px 0}
 .review_header .grade-star.g-star5,.review_list .review_single .grade-star.g-star5{background-position:0 0}
 .review_header .right {width: 40%;height:100%;text-align: right;float: right;padding-right:10px;}
+review_box {height: 200px;width: 100%;overflow-y:auto;}
 .review_list {min-height: 70px;background: #FFF;border-top: 1px solid #F0F0F0;padding:10px;}
 .review_list .review_name {height:20px;line-height:20px;}
 .review_list .review_name.left {float:left;color: #888888;}
